--- a/frontend/style.css
+++ b/frontend/style.css
@@ -49,7 +49,7 @@ img{
 #table{
     width: 100%;
     font-weight: 600;
-    
+
 
    #first_line{
     height: 10px;
@@ -102,16 +102,16 @@ dialog{
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    h2{
-        font-size: 40px;
-        margin-bottom: 15px;
-    }
     button{
         width: 30px;
         height: 30px;
         color: white;
         background-color: rgb(11, 117, 255);
         border: 0;
+    }
+    h2{
+        font-size: 40px;
+        margin-bottom: 15px;
     }
     .flex_dialog{
         display: flex;
@@ -126,7 +126,7 @@ dialog{
             height: 50px;
             padding-inline: 20px;
         }
-        .form_btn{
+        .form_btn, .form_btn_1{
             background-color:  #0047FF;
             color: white;
             width: 100%;
@@ -135,4 +135,12 @@ dialog{
             border: 0;
         }
     }
+}
+.form_btn_2{
+    background-color:  red;
+            color: white;
+            width: 100%;
+            height: 50px;
+            cursor: pointer;
+            border: 0;
 }
