--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
     align-items: center;
     gap: 50px;
     p{
+        font-size: xx-large;
         display: flex;
         flex-direction: column;
         align-items: center;
