--- a/pages/modules_of_scss/header.scss
+++ b/pages/modules_of_scss/header.scss
@@ -113,7 +113,7 @@ img{
       .help_with_searching{
         max-width: 240px;
         max-height: 32px;
-        padding: 8px 16px 8px 16px;
+        padding: 8px;
         border-radius: 6px;
         background: rgba(0, 186, 136, 1);
         color: white;
