--- a/pages/modules_of_scss/header.scss
+++ b/pages/modules_of_scss/header.scss
@@ -126,13 +126,13 @@ img{
       }
     }
   }
-  .sign_in{
+  .sign_in, .sign_up{
     position: absolute;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
     max-width: 575px;
-    max-height: 610px;
+    max-height: 700px;
     border: 0;
     width: 100%;
     border-radius: 16px;
@@ -193,9 +193,9 @@ img{
         background: rgba(234, 12, 12, 1);
       }
     }
-    .signin{
+    .signin, .signup{
       margin-top: 15px;
-      .checking_account{
+      .checking_account, .registing_account{
         margin-top: 8px;
         width: 100%;
         padding: 14px 24px 14px 24px;
@@ -205,7 +205,7 @@ img{
         font-weight: 400;
         line-height: 24px;
       }
-      #check{
+      #check, #check2{
         width: 18px;
         height: 18px;
         accent-color: rgba(234, 12, 12, 1);
@@ -230,7 +230,7 @@ img{
           color: rgba(157, 123, 109, 1);
         }
       }
-      .enter{
+      .enter, .regist{
         margin-top: 20px;
         height: 52px;
         width: 100%;
