--- a/style.scss
+++ b/style.scss
@@ -6,15 +6,37 @@
         justify-content: space-between;
         align-items: center;
         .first_side{
-
+            h1{
+                font-size: 40px;
+                font-weight: 800;
+                line-height: 48px;
+            }
+            .assesment{
+                font-size: 24px;
+                font-weight: 400;
+                line-height: 33.6px;
+            }
         }
         .second_side{
-            img{
-                max-width: 57%;
-                position: absolute;
-                right: 0;
-                mix-blend-mode: multiply;
-            }
+            display: flex;
+            align-items: center;
+            // .slide{
+            //     width: 100px;
+            //     height: 700px;
+            //     border-radius: 50px 0px 0px 200px;        
+            // }
+            // #one{
+            //     border-radius: 50px 0px 50px 200px;
+            //     margin-right: -50px;
+            //     background-color: red;
+            // }
+            // #two{
+            //     border-radius: 50px 0px 0px 20px;  
+            //     background-color: blue;
+            // }
         }
     }
 }
+
+
+
